[package]
name = "totems"
version = "0.2.2"
authors = ["ObliqueMotion <aeketn@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A collection of assertion macros for unit testing or otherwise."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/ObliqueMotion/totems-rs"
keywords = ["assertion", "assertions", "macro", "macros", "test", "tests", "testing", "unit tests"]
categories = "[development-tools::testing]"

[dependencies]
