[package]
name = "totems"
version = "0.2.6"
authors = ["ObliqueMotion <aeketn@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://docs.rs/totems"
description = "A collection of assertion macros for unit testing or otherwise."
repository = "https://github.com/ObliqueMotion/totems-rs"
categories = ["development-tools::testing"]
keywords = ["assert", "macros", "unit", "test", "tests"]
